--- a/cms/stdclass.config
+++ b/cms/stdclass.config
@@ -1,5 +1,5 @@
 #Class=RealName Default Interface[ Simple]
-\LCMS\Core\LXML=\LCMS\Core\LXML \LCMS\Core\LXML \LCMS\Core\ILXML
-\LCMS\Core\TagStripper=\LCMS\Core\TagStripper \LCMS\Core\TagStripper \LCMS\Core\ITagStripper
-\LCMS\Core\PageLog=\LCMS\Core\PageLog \LCMS\Core\PageLog \LCMS\Core\IPageLog
-\LCMS\Core\AllowedTags=\LCMS\Core\AllowedTags \LCMS\Core\AllowedTags \LCMS\Core\IAllowedTags
+\LCMS\Core\XML=\LCMS\Core\LXML \LCMS\Core\LXML \LCMS\Core\IXML \LCMS\Core\LXML
+\LCMS\Core\TagStripper=\LCMS\Core\LTagStripper \LCMS\Core\LTagStripper \LCMS\Core\ITagStripper \LCMS\Core\LTagStripper
+\LCMS\Core\PageLog=\LCMS\Core\LPageLog \LCMS\Core\LPageLog \LCMS\Core\IPageLog \LCMS\Core\LPageLog
+\LCMS\Core\AllowedTags=\LCMS\Core\LAllowedTags \LCMS\Core\LAllowedTags \LCMS\Core\IAllowedTags \LCMS\Core\LAllowedTags
