Gitignore and Pages 0.7

--- a/cms/stdclass.config
+++ b/cms/stdclass.config
@@ -3,3 +3,5 @@
 \LCMS\Core\TagStripper=\LCMS\Core\LTagStripper \LCMS\Core\LTagStripper \LCMS\Core\ITagStripper \LCMS\Core\LTagStripper
 \LCMS\Core\PageLog=\LCMS\Core\LPageLog \LCMS\Core\LPageLog \LCMS\Core\IPageLog \LCMS\Core\LPageLog
 \LCMS\Core\AllowedTags=\LCMS\Core\LAllowedTags \LCMS\Core\LAllowedTags \LCMS\Core\IAllowedTags \LCMS\Core\LAllowedTags
+\LCMS\Core\Page=\LCMS\Core\LPage \LCMS\Core\LPage \LCMS\Core\IPage \LCMS\Core\LPage
+
