--- a/cms/stdclass.config
+++ b/cms/stdclass.config
@@ -4,4 +4,5 @@
 \LCMS\Core\PageLog=\LCMS\Core\LPageLog \LCMS\Core\LPageLog \LCMS\Core\IPageLog \LCMS\Core\LPageLog
 \LCMS\Core\AllowedTags=\LCMS\Core\LAllowedTags \LCMS\Core\LAllowedTags \LCMS\Core\IAllowedTags \LCMS\Core\LAllowedTags
 \LCMS\Core\Page=\LCMS\Core\LPage \LCMS\Core\LPage \LCMS\Core\IPage \LCMS\Core\LPage
+\LCMS\Core\User=\LCMS\Core\LUser \LCMS\Core\LUser \LCMS\Core\IUser \LCMS\Core\LUser
 
